// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputModal render should render aria label 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-5"
          aria-label="Some aria label - modal"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-4"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-5"
          >
            <span
              class="pf-v5-c-form-control pf-m-error"
            >
              <input
                aria-invalid="true"
                aria-label="Some aria label"
                data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                type="text"
                value=""
              />
              <span
                class="pf-v5-c-form-control__utilities"
              >
                <span
                  class="pf-v5-c-form-control__icon pf-m-status"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="pf-v5-c-form__helper-text"
            >
              <div
                aria-live="polite"
                class="pf-v5-c-helper-text"
                id="helper-text2"
              >
                <div
                  class="pf-v5-c-helper-text__item pf-m-error"
                >
                  <span
                    class="pf-v5-c-helper-text__item-text"
                  >
                    Name cannot be blank
                  </span>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="pf-v5-c-modal-box__footer"
          >
            <button
              aria-disabled="true"
              class="pf-v5-c-button pf-m-primary pf-m-disabled"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-3"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render open 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-3"
          aria-label="input text - modal"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-v5-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-2"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-small-2-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-3"
          >
            <span
              class="pf-v5-c-form-control pf-m-error"
            >
              <input
                aria-invalid="true"
                aria-label="input text"
                data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                type="text"
                value=""
              />
              <span
                class="pf-v5-c-form-control__utilities"
              >
                <span
                  class="pf-v5-c-form-control__icon pf-m-status"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="pf-v5-c-form__helper-text"
            >
              <div
                aria-live="polite"
                class="pf-v5-c-helper-text"
                id="helper-text2"
              >
                <div
                  class="pf-v5-c-helper-text__item pf-m-error"
                >
                  <span
                    class="pf-v5-c-helper-text__item-text"
                  >
                    Name cannot be blank
                  </span>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="pf-v5-c-modal-box__footer"
          >
            <button
              aria-disabled="true"
              class="pf-v5-c-button pf-m-primary pf-m-disabled"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-1"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render title 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-4"
          aria-label="input text - modal"
          aria-labelledby="pf-modal-part-2 pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-3"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-3"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Some title
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-4"
          >
            <span
              class="pf-v5-c-form-control pf-m-error"
            >
              <input
                aria-invalid="true"
                aria-label="input text"
                data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                type="text"
                value=""
              />
              <span
                class="pf-v5-c-form-control__utilities"
              >
                <span
                  class="pf-v5-c-form-control__icon pf-m-status"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <div
              class="pf-v5-c-form__helper-text"
            >
              <div
                aria-live="polite"
                class="pf-v5-c-helper-text"
                id="helper-text2"
              >
                <div
                  class="pf-v5-c-helper-text__item pf-m-error"
                >
                  <span
                    class="pf-v5-c-helper-text__item-text"
                  >
                    Name cannot be blank
                  </span>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="pf-v5-c-modal-box__footer"
          >
            <button
              aria-disabled="true"
              class="pf-v5-c-button pf-m-primary pf-m-disabled"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-2"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render without any props 1`] = `
<body>
  <div />
  <div />
</body>
`;
